k8s/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: event-driven
  labels:
    app: event-driven-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: event-driven-backend
  template:
    metadata:
      name: event-driven-backend
      labels:
        app: event-driven-backend
    spec:
      containers:
        - name: event-app
          image: event-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
