k8s/backend/eventdriven-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: event-driven
  labels:
    app: event-driven-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: event-driven-backend
  template:
    metadata:
      name: event-driven-backend
      labels:
        app: event-driven-backend
    spec:
      imagePullSecrets:
        - name: gitlab-registry-key
      containers:
        - name: event-driven-backend
          image: registry.gitlab.com/oussama-el-amrani/even-driven-architecture:3f44b281
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
