k8s/backend/eventdriven-backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: 
spec:
  selector:
    app: 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
