k8s/backend/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: backend-route
  namespace: event-driven
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: backend-svc
  tls:
    termination: edge
